force-app/main/default/objects/mcdm_15__LinkedBusinessUnit__c/mcdm_15__LinkedBusinessUnit__c.object-meta.xml
<CustomObject>
    <label>Marketing Cloud Business Unit</label>
    <nameField>
        <displayFormat>LBU-{0}</displayFormat>
        <label>Linked Business Unit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Cloud Business Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>