force-app/main/default/objects/mcdm_15__LinkedBusinessUnit__c/fields/mcdm_15__AccountName__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__AccountName__c</fullName>
    <description>Stores the name of the Linked Business Unit Account</description>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>