force-app/main/default/objects/mcdm_15__LinkedBusinessUnit__c/fields/mcdm_15__AuthProviderName__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__AuthProviderName__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The Name of the Auth Provider associated with this Linked Business Unit</description>
    <label>Auth Provider Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>