force-app/main/default/objects/mcdm_15__LinkedBusinessUnit__c/fields/mcdm_15__AuthSettingsId__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__AuthSettingsId__c</fullName>
    <description>The ID of the Auth Settings entry for the corresponding Auth Provider</description>
    <label>Auth Settings ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>