force-app/main/default/objects/mcdm_15__LinkedBusinessUnit__c/fields/mcdm_15__BusinessUnitName__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__BusinessUnitName__c</fullName>
    <description>Stores the name of the Linked Business Unit</description>
    <label>Business Unit Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>