force-app/main/default/objects/mcdm_15__LinkedBusinessUnit__c/fields/mcdm_15__DisplayName__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__DisplayName__c</fullName>
    <description>The User entered Display Name associated with the Linked Business Unit</description>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>