force-app/main/default/objects/mcdm_15__LinkedBusinessUnit__c/fields/mcdm_15__Enabled__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this Business Unit is enabled or disabled</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>