force-app/main/default/objects/mcdm_15__LinkedBusinessUnit__c/fields/mcdm_15__IsAuthorized__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__IsAuthorized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for whether the Linked Business Unit&#39;s Named Credential is authorized</description>
    <label>Authorized?</label>
    <type>Checkbox</type>
</CustomField>