force-app/main/default/objects/mcdm_15__LinkedBusinessUnit__c/fields/mcdm_15__Mid__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Mid__c</fullName>
    <description>Stores the mid value for this Linked Business Unit</description>
    <label>MID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>