force-app/main/default/objects/mcdm_15__LinkedBusinessUnit__c/fields/mcdm_15__NamedCredentialApiName__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__NamedCredentialApiName__c</fullName>
    <label>Named Credential API Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>