force-app/main/default/objects/mcdm_15__LinkedBusinessUnit__c/fields/mcdm_15__NamedCredentialId__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__NamedCredentialId__c</fullName>
    <label>Named Credential ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>