force-app/main/default/objects/mcdm_15__LinkedBusinessUnit__c/fields/mcdm_15__SuffixNumber__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__SuffixNumber__c</fullName>
    <description>The Suffix Used for the Linked Business Unit Authentication Objects</description>
    <label>Suffix Number</label>
    <type>AutoNumber</type>
</CustomField>