force-app/main/default/objects/mcdm_15__LinkedBusinessUnit__c/fields/mcdm_15__Username__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Username__c</fullName>
    <description>The Username Authenticated with the Named Credential that is associated with this Linked Business Unit</description>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>